--- a/EugeneTest1/Base.lproj/Main.storyboard
+++ b/EugeneTest1/Base.lproj/Main.storyboard
@@ -11,29 +11,52 @@
         <!--Study-->
         <scene sceneID="12D-er-P33">
             <objects>
-                <viewController id="GYK-Qx-PgR" sceneMemberID="viewController">
+                <viewController id="GYK-Qx-PgR" customClass="SecondViewController" customModule="EugeneTest1" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="ehE-PX-HnE">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Image" translatesAutoresizingMaskIntoConstraints="NO" id="jRU-ib-W40">
-                                <rect key="frame" x="87" y="384" width="240" height="128"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="a" translatesAutoresizingMaskIntoConstraints="NO" id="xeg-cL-T1g">
+                                <rect key="frame" x="54" y="232" width="307" height="204"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ptb-4M-ds6">
+                                <rect key="frame" x="222" y="499" width="139" height="57"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Next &gt;&gt;"/>
+                                <connections>
+                                    <action selector="nextButton:" destination="GYK-Qx-PgR" eventType="touchUpInside" id="Meb-aJ-8O6"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Y8Q-hU-UXz">
+                                <rect key="frame" x="54" y="499" width="139" height="57"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="&lt;&lt; Back"/>
+                                <connections>
+                                    <action selector="backButton:" destination="GYK-Qx-PgR" eventType="touchUpInside" id="Beq-7r-75d"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="RCl-rq-R8a"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="Study" image="folder.fill.badge.person.crop" catalog="system" id="3EL-ec-fdb"/>
+                    <connections>
+                        <outlet property="ImageView" destination="xeg-cL-T1g" id="CS2-0A-7e9"/>
+                        <outlet property="backButton" destination="Y8Q-hU-UXz" id="NOl-kW-qbg"/>
+                        <outlet property="nextButton" destination="ptb-4M-ds6" id="gGt-vd-EuN"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="sSZ-87-RdF" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-393" y="303"/>
+            <point key="canvasLocation" x="-394.20289855072468" y="302.00892857142856"/>
         </scene>
         <!--About-->
         <scene sceneID="kqO-5T-hp1">
             <objects>
-                <viewController id="0ey-Ia-yhR" sceneMemberID="viewController">
+                <viewController id="0ey-Ia-yhR" customClass="ThirdViewController" customModule="EugeneTest1" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="5N2-jq-97m">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -55,7 +78,7 @@
         <!--Home-->
         <scene sceneID="rWW-h1-gWF">
             <objects>
-                <viewController id="uT5-Rz-9ia" sceneMemberID="viewController">
+                <viewController id="uT5-Rz-9ia" customClass="FirstViewController" customModule="EugeneTest1" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="ZNk-x5-H04">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -97,7 +120,7 @@
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <color key="barTintColor" systemColor="systemFillColor"/>
-                        <color key="selectedImageTintColor" systemColor="systemGreenColor"/>
+                        <color key="selectedImageTintColor" systemColor="systemBlueColor"/>
                     </tabBar>
                     <connections>
                         <segue destination="uT5-Rz-9ia" kind="relationship" relationship="viewControllers" id="P7O-Ey-fcd"/>
@@ -139,9 +162,9 @@
         </scene>
     </scenes>
     <resources>
-        <image name="Image" width="328" height="328"/>
         <image name="Image-1" width="328" height="328"/>
         <image name="Image-2" width="1666" height="1638"/>
+        <image name="a" width="255" height="255"/>
         <image name="character.book.closed.fill" catalog="system" width="115" height="128"/>
         <image name="folder.fill.badge.person.crop" catalog="system" width="128" height="91"/>
         <image name="house" catalog="system" width="128" height="106"/>
@@ -150,11 +173,11 @@
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
+        <systemColor name="systemBlueColor">
+            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
         <systemColor name="systemFillColor">
             <color red="0.47058823529411764" green="0.47058823529411764" blue="0.50196078431372548" alpha="0.20000000000000001" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
-        <systemColor name="systemGreenColor">
-            <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
